@@ -13,6 +13,6 @@ AUX stop-ds-admin 152 RMD160 64e8627ceed23664432ced3311442c9088ded19e SHA1 10104
 DIST 389-admin-1.1.16.tar.bz2 614438 RMD160 0c7393afcb321213c68eb26640f62efb0c51e346 SHA1 e2facc231d1475b218321b7dbdb04d8f9b6ebacb SHA256 9c942a010f0fb923ff91fb4f65ba65cb1994a787ebf672ff9be6eb2501d65829
 DIST 389-admin-1.1.23.tar.bz2 628059 RMD160 613d27b12230b15bb784078ba1f7b69ef9d755fe SHA1 b3013f3ce833f5dae8ec33f881f46a064f4d1d3d SHA256 a081df73dab2918e56660f554eb253f866744a2910b973d4f9b8ae281e6d9d89
 EBUILD 389-admin-1.1.16.ebuild 4987 RMD160 82e96305de4bb2448fa5341a30caa70ff60953c7 SHA1 b9837245ca069fb416aca962220460029ef3cbbf SHA256 4ef8a08a08d75c0792f8f2416132d758a1bda91261f973324c7e64e710c91459
-EBUILD 389-admin-1.1.23.ebuild 4987 RMD160 caf80fd8f8eaa5729be04eab33ad42490afd34cc SHA1 3ab9d6494b3fdf0a6323fd0c1644f668c14636ad SHA256 3dee1d038929071200ee99ce8972264a996374d837aad314ef7216621b32ff66
-MISC ChangeLog 2162 RMD160 b2eeccee7e03b9cc7e3caabe19400676aef78c6c SHA1 fd9bbd37ad32bdb2e0744dbf5fdf710b8629cfa0 SHA256 13d94050d04e320c135f45bf5bcd43fd2c21a6bb0624cd01d073b7ad062fba78
+EBUILD 389-admin-1.1.23.ebuild 4989 RMD160 55c9bbe624bad66a4349df3444d0b6b06b1fa2f6 SHA1 c1c91dd5d33410d04039031636b58582aeb59085 SHA256 fc7961ed0cad7dd68b223d9be6e99d9101bc4bc216439b6f2551bf09e8d9d4e3
+MISC ChangeLog 2309 RMD160 7b85a92ac28fd1ac5a7a21c8719457205879334d SHA1 b17ef693a085e8ab270199d2bede6968bdb723a0 SHA256 7a55edb9e68fc34c074a7aabae95423c77aac63ffb721f22da1b0b1b3d6801ca
 MISC metadata.xml 527 RMD160 f5e5e8933b5d37c85fde74c92266727f7f11b3b9 SHA1 3836ea478456bd04e65d2adc262200b48faf36b9 SHA256 9b67f22fea1b3f65cfaec5ef7d4d1f411436c87c9ffb107c5e6bc604b77cd31a
