@@ -1,6 +1,9 @@
 # ChangeLog for net-nds/389-admin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/389-admin/ChangeLog,v 1.8 2011/08/14 09:23:45 lxnay Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/389-admin/ChangeLog,v 1.9 2011/08/16 20:15:51 lxnay Exp $
+
+  16 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> 389-admin-1.1.23.ebuild:
+  fix compilation with selinux USE flag on, hopefully fixes bug 379309
 
 *389-admin-1.1.23 (14 Aug 2011)
 
